--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ export(score_change_detection)
 export(score_color_dots)
 export(score_color_speed)
 export(score_dot_memory)
+export(score_go_nogo)
 export(score_ospan)
+export(score_quick_tapping)
 export(score_rspan)
 export(score_seq_tapping)
 export(score_shopping_list)
@@ -31,10 +33,15 @@ export(summary_change_detection)
 export(summary_color_dots)
 export(summary_color_shapes)
 export(summary_dot_memory)
+export(summary_go_nogo)
 export(summary_ospan)
+export(summary_quick_tapping)
+export(summary_rspan)
 export(summary_seq_tapping)
 export(summary_shopping_list)
 export(summary_sspan)
+export(summary_stroop)
+export(summary_symbol_search)
 export(summary_visual_wm)
 export(unique_participants)
 import(tidyverse)
