--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(studyday_per_participant)
 export(summary_change_detection)
 export(summary_color_dots)
 export(summary_color_shapes)
+export(summary_color_speed)
 export(summary_dot_memory)
 export(summary_go_nogo)
 export(summary_ospan)
