--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,10 @@ export(filter_studyday)
 export(get_file_ext)
 export(mult_by)
 export(read_ambcog)
+export(restructure_tapping_data)
 export(score_change_detection)
 export(score_color_dots)
+export(score_color_shapes)
 export(score_color_speed)
 export(score_dot_memory)
 export(score_go_nogo)
