--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(filter_RT)
 export(filter_date)
 export(filter_studyday)
 export(get_file_ext)
+export(get_max_setsize_span)
 export(mult_by)
 export(read_ambcog)
 export(restructure_tapping_data)
@@ -18,12 +19,10 @@ export(score_color_shapes)
 export(score_color_speed)
 export(score_dot_memory)
 export(score_go_nogo)
-export(score_ospan)
 export(score_quick_tapping)
-export(score_rspan)
 export(score_seq_tapping)
 export(score_shopping_list)
-export(score_sspan)
+export(score_span)
 export(score_stroop)
 export(score_symbol_search)
 export(score_visual_wm)
