--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(add_to)
 export(distance)
 export(filter_RT)
 export(filter_date)
+export(filter_duplicates_keeplast)
+export(filter_exact_duplicates)
 export(filter_studyday)
 export(get_file_ext)
 export(get_max_setsize_span)
