--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_to)
 export(compliance_report)
 export(distance)
 export(filter_RT)
+export(filter_cog_duplicate_records)
 export(filter_date)
 export(filter_exact_duplicates)
 export(filter_studyday)
