--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_max_setsize_span)
 export(mult_by)
 export(read_ambcog)
 export(restructure_tapping_data)
+export(score_assoc_fluency)
 export(score_change_detection)
 export(score_color_dots)
 export(score_color_shapes)
@@ -34,6 +35,7 @@ export(sessions_per_participant)
 export(span_order)
 export(stitch_datasets)
 export(studyday_per_participant)
+export(summary_assoc_fluency)
 export(summary_change_detection)
 export(summary_color_dots)
 export(summary_color_shapes)
