--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,11 @@ export(filter_exact_duplicates)
 export(filter_studyday)
 export(filter_survey_duplicate_records)
 export(get_file_ext)
+export(get_max_col)
 export(get_max_setsize_span)
 export(mult_by)
 export(read_ambcog)
+export(restructure_interference_data)
 export(restructure_tapping_data)
 export(score_assoc_fluency)
 export(score_change_detection)
@@ -30,6 +32,7 @@ export(score_shopping_list)
 export(score_span)
 export(score_stroop)
 export(score_symbol_search)
+export(score_ufov)
 export(score_visual_wm)
 export(sessions_per_participant)
 export(span_order)
@@ -41,6 +44,7 @@ export(summary_color_dots)
 export(summary_color_shapes)
 export(summary_color_speed)
 export(summary_dot_memory)
+export(summary_dot_memory_interference)
 export(summary_go_nogo)
 export(summary_ospan)
 export(summary_quick_tapping)
@@ -50,6 +54,7 @@ export(summary_shopping_list)
 export(summary_sspan)
 export(summary_stroop)
 export(summary_symbol_search)
+export(summary_ufov)
 export(summary_visual_wm)
 export(unique_participants)
 import(tidyverse)
