--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(score_color_shapes)
 export(score_color_speed)
 export(score_dot_memory)
 export(score_go_nogo)
+export(score_mot)
 export(score_quick_tapping)
 export(score_seq_tapping)
 export(score_shopping_list)
@@ -46,6 +47,7 @@ export(summary_color_speed)
 export(summary_dot_memory)
 export(summary_dot_memory_interference)
 export(summary_go_nogo)
+export(summary_mot)
 export(summary_ospan)
 export(summary_quick_tapping)
 export(summary_rspan)
