--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(score_color_dots)
 export(score_color_shapes)
 export(score_color_speed)
 export(score_dot_memory)
+export(score_dot_memory_alt)
 export(score_go_nogo)
 export(score_mot)
 export(score_quick_tapping)
