added summary script

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(summary_color_dots)
 export(summary_color_shapes)
 export(summary_color_speed)
 export(summary_dot_memory)
+export(summary_dot_memory_alt)
 export(summary_dot_memory_interference)
 export(summary_go_nogo)
 export(summary_mot)
