--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ export(SDT_adj)
 export(add_common_ids)
 export(add_metadate_cols)
 export(add_to)
+export(build_launch_tag)
+export(build_menu_tag)
+export(build_pack_tag)
+export(build_root_tag)
 export(compliance_report)
 export(distance)
 export(filter_RT)
@@ -12,6 +16,7 @@ export(filter_date)
 export(filter_exact_duplicates)
 export(filter_studyday)
 export(filter_survey_duplicate_records)
+export(generate_study_xml)
 export(get_file_ext)
 export(get_max_col)
 export(get_max_setsize_span)
