--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(get_max_col)
 export(get_max_setsize_span)
 export(mult_by)
 export(read_ambcog)
+export(read_parsed_dir)
 export(restructure_interference_data)
 export(restructure_tapping_data)
 export(score_assoc_fluency)
