--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(generate_study_xml)
 export(get_file_ext)
 export(get_max_col)
 export(get_max_setsize_span)
+export(make_tidy_datetime_filename)
 export(mult_by)
 export(read_ambcog)
 export(read_parsed_dir)
