--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(build_pack_tag)
 export(build_root_tag)
 export(compliance_report)
 export(distance)
+export(download_zip_server)
 export(filter_RT)
 export(filter_cog_duplicate_records)
 export(filter_date)
@@ -68,4 +69,5 @@ export(summary_symbol_search)
 export(summary_ufov)
 export(summary_visual_wm)
 export(unique_participants)
+import(httr)
 import(tidyverse)
