--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(SDT_adj)
 export(add_common_ids)
+export(add_md5_hash_col)
 export(add_metadate_cols)
 export(add_to)
 export(build_launch_tag)
@@ -69,5 +70,6 @@ export(summary_symbol_search)
 export(summary_ufov)
 export(summary_visual_wm)
 export(unique_participants)
+import(digest)
 import(httr)
 import(tidyverse)
